docs/api/qiskit/0.43/qiskit.circuit.library.NLocal.md
---
title: NLocal
description: API reference for qiskit.circuit.library.NLocal
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.NLocal
---

# NLocal

<span id="qiskit.circuit.library.NLocal" />

`NLocal(num_qubits=None, rotation_blocks=None, entanglement_blocks=None, entanglement=None, reps=1, insert_barriers=False, parameter_prefix='θ', overwrite_block_parameters=True, skip_final_rotation_layer=False, skip_unentangled_qubits=False, initial_state=None, name='nlocal')` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/n_local/n_local.py "view source code")

Bases: `BlueprintCircuit`

The n-local circuit class.

The structure of the n-local circuit are alternating rotation and entanglement layers. In both layers, parameterized circuit-blocks act on the circuit in a defined way. In the rotation layer, the blocks are applied stacked on top of each other, while in the entanglement layer according to the `entanglement` strategy. The circuit blocks can have arbitrary sizes (smaller equal to the number of qubits in the circuit). Each layer is repeated `reps` times, and by default a final rotation layer is appended.

For instance, a rotation block on 2 qubits and an entanglement block on 4 qubits using `'linear'` entanglement yields the following circuit.

```python
┌──────┐ ░ ┌──────┐                      ░ ┌──────┐
┤0     ├─░─┤0     ├──────────────── ... ─░─┤0     ├
│  Rot │ ░ │      │┌──────┐              ░ │  Rot │
┤1     ├─░─┤1     ├┤0     ├──────── ... ─░─┤1     ├
├──────┤ ░ │  Ent ││      │┌──────┐      ░ ├──────┤
┤0     ├─░─┤2     ├┤1     ├┤0     ├ ... ─░─┤0     ├
│  Rot │ ░ │      ││  Ent ││      │      ░ │  Rot │
┤1     ├─░─┤3     ├┤2     ├┤1     ├ ... ─░─┤1     ├
├──────┤ ░ └──────┘│      ││  Ent │      ░ ├──────┤
┤0     ├─░─────────┤3     ├┤2     ├ ... ─░─┤0     ├
│  Rot │ ░         └──────┘│      │      ░ │  Rot │
┤1     ├─░─────────────────┤3     ├ ... ─░─┤1     ├
└──────┘ ░                 └──────┘      ░ └──────┘

|                                 |
+---------------------------------+
       repeated reps times
```

If specified, barriers can be inserted in between every block. If an initial state object is provided, it is added in front of the NLocal.

Create a new n-local circuit.

**Parameters**

*   **num\_qubits** (*int | None*) – The number of qubits of the circuit.
*   **rotation\_blocks** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| list\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*] |* [*qiskit.circuit.Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| list\[*[*qiskit.circuit.Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction")*] | None*) – The blocks used in the rotation layers. If multiple are passed, these will be applied one after another (like new sub-layers).
*   **entanglement\_blocks** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| list\[*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*] |* [*qiskit.circuit.Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction") *| list\[*[*qiskit.circuit.Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction")*] | None*) – The blocks used in the entanglement layers. If multiple are passed, these will be applied one after another. To use different entanglements for the sub-layers, see [`get_entangler_map()`](qiskit.circuit.library.NLocal#get_entangler_map "qiskit.circuit.library.NLocal.get_entangler_map").
*   **entanglement** (*list\[int] | list\[list\[int]] | None*) – The indices specifying on which qubits the input blocks act. If `None`, the entanglement blocks are applied at the top of the circuit.
*   **reps** (*int*) – Specifies how often the rotation blocks and entanglement blocks are repeated.
*   **insert\_barriers** (*bool*) – If `True`, barriers are inserted in between each layer. If `False`, no barriers are inserted.
*   **parameter\_prefix** (*str*) – The prefix used if default parameters are generated.
*   **overwrite\_block\_parameters** (*bool | list\[list\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*]]*) – If the parameters in the added blocks should be overwritten. If `False`, the parameters in the blocks are not changed.
*   **skip\_final\_rotation\_layer** (*bool*) – Whether a final rotation layer is added to the circuit.
*   **skip\_unentangled\_qubits** (*bool*) – If `True`, the rotation gates act only on qubits that are entangled. If `False`, the rotation gates act on all qubits.
*   **initial\_state** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| None*) – A [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") object which can be used to describe an initial state prepended to the NLocal circuit.
*   **name** (*str | None*) – The name of the circuit.

**Examples**

TODO

**Raises**

*   **ValueError** – If `reps` parameter is less than or equal to 0.
*   **TypeError** – If `reps` parameter is not an int value.

## Methods Defined Here

<span id="qiskit-circuit-library-nlocal-add-layer" />

### add\_layer

<span id="qiskit.circuit.library.NLocal.add_layer" />

`NLocal.add_layer(other, entanglement=None, front=False)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/n_local/n_local.py "view source code")

Append another layer to the NLocal.

**Parameters**

*   **other** (*Union\['NLocal',* [*qiskit.circuit.Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction")*,* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*]*) – The layer to compose, can be another NLocal, an Instruction or Gate, or a QuantumCircuit.
*   **entanglement** (*list\[int] | str | list\[list\[int]] | None*) – The entanglement or qubit indices.
*   **front** (*bool*) – If True, `other` is appended to the front, else to the back.

**Returns**

self, such that chained composes are possible.

**Raises**

**TypeError** – If other is not compatible, i.e. is no Instruction and does not have a to\_instruction method.

**Return type**

[NLocal](qiskit.circuit.library.NLocal "qiskit.circuit.library.NLocal")

<span id="qiskit-circuit-library-nlocal-assign-parameters" />

### assign\_parameters

<span id="qiskit.circuit.library.NLocal.assign_parameters" />

`NLocal.assign_parameters(parameters, inplace=False)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/n_local/n_local.py "view source code")

Assign parameters to the n-local circuit.

This method also supports passing a list instead of a dictionary. If a list is passed, the list must have the same length as the number of unbound parameters in the circuit. The parameters are assigned in the order of the parameters in [`ordered_parameters()`](qiskit.circuit.library.NLocal#ordered_parameters "qiskit.circuit.library.NLocal.ordered_parameters").

**Returns**

A copy of the NLocal circuit with the specified parameters.

**Raises**

**AttributeError** – If the parameters are given as list and do not match the number of parameters.

**Return type**

[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") | None

<span id="qiskit-circuit-library-nlocal-get-entangler-map" />

### get\_entangler\_map

<span id="qiskit.circuit.library.NLocal.get_entangler_map" />

`NLocal.get_entangler_map(rep_num, block_num, num_block_qubits)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/n_local/n_local.py "view source code")

Get the entangler map for in the repetition `rep_num` and the block `block_num`.

The entangler map for the current block is derived from the value of `self.entanglement`. Below the different cases are listed, where `i` and `j` denote the repetition number and the block number, respectively, and `n` the number of qubits in the block.

| entanglement type                | entangler map                                      |
| -------------------------------- | -------------------------------------------------- |
| `None`                           | `[[0, ..., n - 1]]`                                |
| `str` (e.g `'full'`)             | the specified connectivity on `n` qubits           |
| `List[int]`                      | \[`entanglement`]                                  |
| `List[List[int]]`                | `entanglement`                                     |
| `List[List[List[int]]]`          | `entanglement[i]`                                  |
| `List[List[List[List[int]]]]`    | `entanglement[i][j]`                               |
| `List[str]`                      | the connectivity specified in `entanglement[i]`    |
| `List[List[str]]`                | the connectivity specified in `entanglement[i][j]` |
| `Callable[int, str]`             | same as `List[str]`                                |
| `Callable[int, List[List[int]]]` | same as `List[List[List[int]]]`                    |

Note that all indices are to be taken modulo the length of the array they act on, i.e. no out-of-bounds index error will be raised but we re-iterate from the beginning of the list.

**Parameters**

*   **rep\_num** (*int*) – The current repetition we are in.
*   **block\_num** (*int*) – The block number within the entanglement layers.
*   **num\_block\_qubits** (*int*) – The number of qubits in the block.

**Returns**

The entangler map for the current block in the current repetition.

**Raises**

**ValueError** – If the value of `entanglement` could not be cast to a corresponding entangler map.

**Return type**

*Sequence*\[*Sequence*\[int]]

<span id="qiskit-circuit-library-nlocal-get-unentangled-qubits" />

### get\_unentangled\_qubits

<span id="qiskit.circuit.library.NLocal.get_unentangled_qubits" />

`NLocal.get_unentangled_qubits()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/n_local/n_local.py "view source code")

Get the indices of unentangled qubits in a set.

**Returns**

The unentangled qubits.

**Return type**

set\[int]

<span id="qiskit-circuit-library-nlocal-print-settings" />

### print\_settings

<span id="qiskit.circuit.library.NLocal.print_settings" />

`NLocal.print_settings()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/n_local/n_local.py "view source code")

Returns information about the setting.

**Returns**

The class name and the attributes/parameters of the instance as `str`.

**Return type**

str

## Attributes

<span id="qiskit.circuit.library.NLocal.ancillas" />

### ancillas

Returns a list of ancilla bits in the order that the registers were added.

<span id="qiskit.circuit.library.NLocal.calibrations" />

### calibrations

Return calibration dictionary.

The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`

<span id="qiskit.circuit.library.NLocal.clbits" />

### clbits

Returns a list of classical bits in the order that the registers were added.

<span id="qiskit.circuit.library.NLocal.data" />

### data

<span id="qiskit.circuit.library.NLocal.entanglement" />

### entanglement

Get the entanglement strategy.

**Returns**

The entanglement strategy, see [`get_entangler_map()`](qiskit.circuit.library.NLocal#get_entangler_map "qiskit.circuit.library.NLocal.get_entangler_map") for more detail on how the format is interpreted.

<span id="qiskit.circuit.library.NLocal.entanglement_blocks" />

### entanglement\_blocks

The blocks in the entanglement layers.

**Returns**

The blocks in the entanglement layers.

<span id="qiskit.circuit.library.NLocal.extension_lib" />

### extension\_lib

`= 'include "qelib1.inc";'`

<span id="qiskit.circuit.library.NLocal.global_phase" />

### global\_phase

Return the global phase of the circuit in radians.

<span id="qiskit.circuit.library.NLocal.header" />

### header

`= 'OPENQASM 2.0;'`

<span id="qiskit.circuit.library.NLocal.initial_state" />

### initial\_state

Return the initial state that is added in front of the n-local circuit.

**Returns**

The initial state.

<span id="qiskit.circuit.library.NLocal.insert_barriers" />

### insert\_barriers

If barriers are inserted in between the layers or not.

**Returns**

`True`, if barriers are inserted in between the layers, `False` if not.

<span id="qiskit.circuit.library.NLocal.instances" />

### instances

`= 121`

<span id="qiskit.circuit.library.NLocal.layout" />

### layout

Return any associated layout information anout the circuit

This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

There are two types of permutations caused by the [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.

<span id="qiskit.circuit.library.NLocal.metadata" />

### metadata

The user provided metadata associated with the circuit.

The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

<span id="qiskit.circuit.library.NLocal.num_ancillas" />

### num\_ancillas

Return the number of ancilla qubits.

<span id="qiskit.circuit.library.NLocal.num_clbits" />

### num\_clbits

Return number of classical bits.

<span id="qiskit.circuit.library.NLocal.num_layers" />

### num\_layers

Return the number of layers in the n-local circuit.

**Returns**

The number of layers in the circuit.

<span id="qiskit.circuit.library.NLocal.num_parameters" />

### num\_parameters

<span id="qiskit.circuit.library.NLocal.num_parameters_settable" />

### num\_parameters\_settable

The number of total parameters that can be set to distinct values.

This does not change when the parameters are bound or exchanged for same parameters, and therefore is different from `num_parameters` which counts the number of unique [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects currently in the circuit.

**Returns**

The number of parameters originally available in the circuit.

<Admonition title="Note" type="note">
  This quantity does not require the circuit to be built yet.
</Admonition>

<span id="qiskit.circuit.library.NLocal.num_qubits" />

### num\_qubits

Returns the number of qubits in this circuit.

**Returns**

The number of qubits.

<span id="qiskit.circuit.library.NLocal.op_start_times" />

### op\_start\_times

Return a list of operation start times.

This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

**Returns**

List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

**Raises**

**AttributeError** – When circuit is not scheduled.

<span id="qiskit.circuit.library.NLocal.ordered_parameters" />

### ordered\_parameters

The parameters used in the underlying circuit.

This includes float values and duplicates.

**Examples**

```python
>>> # prepare circuit ...
>>> print(nlocal)
     ┌───────┐┌──────────┐┌──────────┐┌──────────┐
q_0: ┤ Ry(1) ├┤ Ry(θ[1]) ├┤ Ry(θ[1]) ├┤ Ry(θ[3]) ├
     └───────┘└──────────┘└──────────┘└──────────┘
>>> nlocal.parameters
{Parameter(θ[1]), Parameter(θ[3])}
>>> nlocal.ordered_parameters
[1, Parameter(θ[1]), Parameter(θ[1]), Parameter(θ[3])]
```

**Returns**

The parameters objects used in the circuit.

<span id="qiskit.circuit.library.NLocal.parameter_bounds" />

### parameter\_bounds

The parameter bounds for the unbound parameters in the circuit.

**Returns**

A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If `None` is returned, problem is fully unbounded.

<span id="qiskit.circuit.library.NLocal.parameters" />

### parameters

<span id="qiskit.circuit.library.NLocal.preferred_init_points" />

### preferred\_init\_points

The initial points for the parameters. Can be stored as initial guess in optimization.

**Returns**

The initial values for the parameters, or None, if none have been set.

<span id="qiskit.circuit.library.NLocal.prefix" />

### prefix

`= 'circuit'`

<span id="qiskit.circuit.library.NLocal.qregs" />

### qregs

`list[QuantumRegister]`

A list of the quantum registers associated with the circuit.

<span id="qiskit.circuit.library.NLocal.qubits" />

### qubits

Returns a list of quantum bits in the order that the registers were added.

<span id="qiskit.circuit.library.NLocal.reps" />

### reps

The number of times rotation and entanglement block are repeated.

**Returns**

The number of repetitions.

<span id="qiskit.circuit.library.NLocal.rotation_blocks" />

### rotation\_blocks

The blocks in the rotation layers.

**Returns**

The blocks in the rotation layers.

